<resources>
    <string name="app_name">frc2059 Scouting</string>
    <string name="logo_title">The Hitchhikers</string>
    <string name="description">Scouting App - Scout Sheet</string>
    <string name="submit">Submit</string>
    <string name="letterhead_info">Hitchhikers Logo</string>
    <string name="first_logo">FIRST Logo</string>
    <string name="email">business@team2059.org</string>
    <string name="website">http://team2059.org</string>
    <string name="title_bar">The Hitchhikers | FRC Team 2059</string>

    <string name="scout_header">Scout Sheet</string>

    <string name="launcher_name">FRC Scouting</string>

    <!--Headers-->
    <string name="sheet_auto_header">Autonomous</string>
    <string name="sheet_teleop_header">Teleoperated</string>
    <string name="sheet_endgame_header">Endgame</string>
    <string name="sheet_postgame_header">Post Game</string>
    <string name="sheet_comments_header">Comments</string>

    <string name="match_number">Match:</string>
    <string name="hint_number">#</string>
    <string name="team_name">Team:</string>


    <string name="comments_hint">IMPORTANT* Enter in any other information about the team performance (no show, poor driver, lost connection)</string>
    <string name="comments_hint2023">Type notes here</string>

    <!--Auto Entries-->
    <string name="popup">Info!</string>

    <string name="auto_text_habLine">Hab Line</string>
    <string name="auto_text_level">Starting Hab Level</string>

    <string-array name="auto_array_habLevel">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>


    <!--Teleoperated Entries-->

    <!--MasterView    -->
    <string name="description_master">Scouting App - Master View</string>
    <string name="refresh_button">Touch to refresh data</string>

    <string name="t_col_team">Team Name</string>
    <string name="t_col_number">Team Number</string>
    <string name="t_col_district">Home District</string>
    <string name="t_col_rank_points">Rank Points</string>
    <string name="t_col_scored_points">Total Points</string>

    <!-- Menu   -->

    <string name="title1">Competition Type:</string>
    <string name="title2">District Name:</string>
    <string name="title3">Event Name:</string>

    <string name="sync">Sync</string>


    <!--Nav Drawer -->
    <string name="nav_new">New</string>
    <string name="nav_open">Open</string>
    <string name="nav_bluetooth">Bluetooth</string>
    <string name="nav_templates">Templates</string>


    <string name="nav_other">Other</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>

    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <!--Dialog Box -->
    <string name="dialog_instructions">Select the competition data to share to this device:</string>

    <!--Filter RadioGroup -->
    <string name="filter_info">Filter Teams Based On:</string>
    <string name="filter_ranking_score">Ranking Score (Default)</string>
    <string name="filter_OPR">Average Points per Game</string>
    <string name="filter_auto_points">Auto Points</string>
    <string name="filter_teleop_points">Teleop Points</string>
    <string name="filter_endgame_points">Endgame Points</string>
    <string name="filter_auto_powercell_count">Auto Power Cell Count</string>
    <string name="filter_teleop_powercell_count">Teleop Power Cell Count</string>
    <string name="filter_climb_count">Climb Count</string>

    <!--2023 Filters-->
    <string name="cube_count">Cube Count</string>
    <string name="cone_count">Cone Count</string>
    <string name="links_count">Links Count</string>
    <string name="bot_count">Bottom Count</string>
    <string name="mid_count">Middle Count</string>
    <string name="top_count">Top Count</string>
    <string name="bot_cube_count">Bottom Cube Count</string>
    <string name="bot_cone_count">Bottom Cone Count</string>
    <string name="mid_cube_count">Middle Cube Count</string>
    <string name="mid_cone_count">Middle Cone Count</string>
    <string name="top_cube_count">Top Cube Count</string>
    <string name="top_cone_count">Top Cone Count</string>



    <!--Match Item -->
    <string name="match_info">
        Auto:\n\n
        &#009;&#009;Init line: %1$s\n
        &#009;&#009;Low att: %2$d\n
        &#009;&#009;Low made: %3$d\n
        &#009;&#009;Out att: %4$d\n
        &#009;&#009;Out made: %5$d\n
        &#009;&#009;Inner made: %6$d\n\nTeleop:\n\n
        &#009;&#009;Low att: %7$d\n
        &#009;&#009;Low made: %8$d\n
        &#009;&#009;Out att: %9$d\n
        &#009;&#009;Out made: %10$d\n
        &#009;&#009;Inner made: %11$d\n
        &#009;&#009;Position control: %12$s\n
        &#009;&#009;Rotation control: %13$s\n\nEndgame:\n\n
        &#009;&#009;Climb att: %14$s\n
        &#009;&#009;Climb success: %15$s\n
        &#009;&#009;Park: %16$s\n
        &#009;&#009;Level: %17$s\n\nNotes:\n\n
        &#009;&#009;%18$s</string>

    <string name="match_info2023">
        Auto:\n\n
        &#009;&#009;Taxi: %1$s\n
        &#009;&#009;Bottom Cube: %2$d\n
        &#009;&#009;Bottom Cone: %3$d\n
        &#009;&#009;Middle Cube: %4$d\n
        &#009;&#009;Middle Cone: %5$d\n
        &#009;&#009;Top Cube: %6$d\n
        &#009;&#009;Top Cone: %7$d\n
        &#009;&#009;Docked, Not Engaged: %8$s\n
        &#009;&#009;Docked, Engaged: %9$s\n\nTeleop:\n\n
        &#009;&#009;Bottom Cube: %10$d\n
        &#009;&#009;Bottom Cone: %11$d\n
        &#009;&#009;Middle Cube: %12$d\n
        &#009;&#009;Middle Cone: %13$d\n
        &#009;&#009;Top Cube: %14$d\n
        &#009;&#009;Top Cone: %15$d\n
        &#009;&#009;Links: %16$d\n\nEndgame:\n\n
        &#009;&#009;Docked, Not Engaged: %17$s\n
        &#009;&#009;Docked, Engaged: %18$s\n
        &#009;&#009;Park: %19$s\n
        &#009;&#009;Sustainability Bonus: %20$s\n
        &#009;&#009;Activation Bonus: %21$s\n
        &#009;&#009;Coop Bonus: %22$s\n\nNotes:\n\n
        &#009;&#009;%23$s</string>

    <!--settings values -->

    <string-array name="theme_options">
        <item>Dark</item>
        <item>Light</item>
        <item>Set By Battery Saver</item>
    </string-array>

    <string-array name="avatar_colors">
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    
    <!--about values -->
    
    <string name="acknowledgements">Event Data provided by <i>FIRST</i></string>
    <string name="frcAPI_link">https://frc-events.firstinspires.org/services/API</string>

</resources>
